--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ html {
 }
 
 body {
+  width: 100vw;
+  height: 100vw;
+  margin: 0;
+  padding: 0;
+  top: 0;
   font-family: 'Lato', sans-serif;
 }
 
@@ -18,6 +23,10 @@ body header {
 
 body footer {
   border-top: 1px solid #0093CF36;
+}
+
+body button {
+  outline: none !important;
 }
 
 .navbar {
@@ -95,10 +104,10 @@ body footer {
 
 @media only screen and (max-width: 600px) {
   #home-banner .prof-inf .prof-img {
-    width: 35% !important;
+    width: 40% !important;
   }
   #home-banner .prof-inf .prof-text {
-    width: 65% !important;
+    width: 60% !important;
   }
 }
 
@@ -122,12 +131,18 @@ body footer {
 
 #home-banner form {
   margin: auto;
-  width: 350px;
+  width: 80%;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   -webkit-box-shadow: 10px 50px 50px #4D648676;
           box-shadow: 10px 50px 50px #4D648676;
   border-radius: 21px;
   padding: 40px 25px;
+}
+
+@media only screen and (max-width: 600px) {
+  #home-banner form {
+    width: 100% !important;
+  }
 }
 
 #home-banner form .form-group label {
@@ -143,7 +158,7 @@ body footer {
 
 #home-banner form .login-btn {
   margin-top: 20px;
-  width: 302px;
+  width: 100%;
   height: 55px;
   background: #0093CF 0% 0% no-repeat padding-box;
   -webkit-box-shadow: 0px 4px 7px #1E376C67;
@@ -216,7 +231,7 @@ body footer {
   padding-top: 30px;
   color: #00BBE5;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 #upcoming .card .card-info .card-title {
@@ -226,7 +241,7 @@ body footer {
   font-weight: bold;
   font-size: 19px;
   overflow: hidden;
-  height: 70px;
+  height: 65px;
 }
 
 #upcoming .card .card-info .card-author {
@@ -330,6 +345,7 @@ body footer {
   position: absolute;
   top: 140px;
   padding-left: 10px;
+  width: 300px;
 }
 
 #previous .video-wrapper .previous-slider .video-card button {
