--- a/style.scss
+++ b/style.scss
@@ -102,11 +102,11 @@ body {
 
 		@media only screen and (max-width: 600px) {
 			.prof-img {
-				width: 35% !important;
+				width: 40% !important;
 			}
 
 			.prof-text {
-				width: 65% !important;
+				width: 60% !important;
 			}
 		}
 
@@ -132,12 +132,17 @@ body {
 
 	form {
 		margin: auto;
-		width: 350px;
+		width:80%;
 		background: #FFFFFF 0% 0% no-repeat padding-box;
 		box-shadow: 10px 50px 50px #4D648676;
 		border-radius: 21px;
 		padding: 40px 25px;
 
+		@media only screen and (max-width: 600px) {
+			& {
+				width: 100% !important;
+			}
+		}
 		.form-group {
 			label {
 				color: #4D6486;
@@ -153,7 +158,7 @@ body {
 
 		.login-btn {
 			margin-top: 20px;
-			width: 302px;
+			width: 100%;
 			height: 55px;
 			background: #0093CF 0% 0% no-repeat padding-box;
 			box-shadow: 0px 4px 7px #1E376C67;
